cmake_minimum_required(VERSION 3.8.0)

project(ShaderCross)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

set(ALL_LIBS
	shaderlab
)

include_directories(
	ShaderLab/
)

set(SOURCE_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(BINARY_ROOT_DIR ${CMAKE_CURRENT_BINARY_DIR})

add_subdirectory(ShaderLab)
add_subdirectory(ThirdParty)

MACRO(SETUP_SAMPLE_START EXE_NAME)
	UNSET(SOURCE_FILES)
	UNSET(HEADER_FILES)
	UNSET(RESOURCE_FILES)
	UNSET(EFFECT_FILES)
ENDMACRO(SETUP_SAMPLE_START)

MACRO(SETUP_SAMPLE_END EXE_NAME)
	SOURCE_GROUP("Source Files" FILES ${SOURCE_FILES})
	SOURCE_GROUP("Header Files" FILES ${HEADER_FILES})
	SOURCE_GROUP("Resource Files" FILES ${RESOURCE_FILES})
	SOURCE_GROUP("Effect Files" FILES ${EFFECT_FILES})
	ADD_EXECUTABLE(${EXE_NAME} ${SOURCE_FILES} ${HEADER_FILES} ${RESOURCE_FILES} ${EFFECT_FILES})
	TARGET_LINK_LIBRARIES(${EXE_NAME} ${ALL_LIBS})
ENDMACRO(SETUP_SAMPLE_END)

SETUP_SAMPLE_START(ShaderCross)
	SET(SOURCE_FILES
		main.cpp
    )
SETUP_SAMPLE_END(ShaderCross)